// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import actions Returns the correct object literals 1`] = `
Object {
  "entity": "rates",
  "type": "import/IMPORT_REQUEST",
}
`;

exports[`Import actions Returns the correct object literals 2`] = `
Object {
  "entity": "rates",
  "status": Object {
    "createdAt": "2020-03-16T07:33:50.816Z",
    "data": Object {
      "report": Array [
        Object {
          "errors": Array [],
          "key": "regions",
          "total": 15,
          "warnings": Array [],
        },
        Object {
          "errors": Array [
            Object {
              "messages": Array [
                "points to a parent called 'Finolhu / Beach Pool Villa' but that does not match from the list of parents",
              ],
              "ref": "Finolhu / FIN 92",
            },
            Object {
              "messages": Array [
                "points to a parent called 'Finolhu / Beach Pool Villa' but that does not match from the list of parents",
              ],
              "ref": "Finolhu / FIN 93",
            },
          ],
          "key": "accommodationRates",
          "total": 4127,
          "warnings": Array [],
        },
      ],
      "success": false,
    },
    "status": "done",
  },
  "type": "import/IMPORT_SUCCESS",
  "workbookId": "123-456",
}
`;

exports[`Import actions Returns the correct object literals 3`] = `
Object {
  "entity": "rates",
  "error": "Failed to import rates",
  "type": "import/IMPORT_FAILURE",
}
`;

exports[`Import actions Returns the correct object literals 4`] = `
Object {
  "entity": "rates",
  "type": "import/GET_IMPORT_STATUS_REQUEST",
}
`;

exports[`Import actions Returns the correct object literals 5`] = `
Object {
  "entity": "rates",
  "status": Object {
    "createdAt": "2020-03-16T07:33:50.816Z",
    "data": Object {
      "report": Array [
        Object {
          "errors": Array [],
          "key": "regions",
          "total": 15,
          "warnings": Array [],
        },
        Object {
          "errors": Array [
            Object {
              "messages": Array [
                "points to a parent called 'Finolhu / Beach Pool Villa' but that does not match from the list of parents",
              ],
              "ref": "Finolhu / FIN 92",
            },
            Object {
              "messages": Array [
                "points to a parent called 'Finolhu / Beach Pool Villa' but that does not match from the list of parents",
              ],
              "ref": "Finolhu / FIN 93",
            },
          ],
          "key": "accommodationRates",
          "total": 4127,
          "warnings": Array [],
        },
      ],
      "success": false,
    },
    "status": "done",
  },
  "type": "import/GET_IMPORT_STATUS_SUCCESS",
  "workbookId": "123-456",
}
`;

exports[`Import actions Returns the correct object literals 6`] = `
Object {
  "entity": "rates",
  "error": "Failed to get import rates status",
  "type": "import/GET_IMPORT_STATUS_FAILURE",
}
`;

exports[`Import actions Returns the correct object literals 7`] = `
Object {
  "entity": "rates",
  "type": "import/IMPORT_PAGE_LOADED",
}
`;

exports[`Import actions Returns the correct object literals 8`] = `
Object {
  "entity": "rates",
  "type": "import/IMPORT_PAGE_UNLOADED",
}
`;

exports[`Import actions Returns the correct object literals 9`] = `
Object {
  "entity": "rates",
  "type": "import/OPEN_IMPORT_CONFIRMATION_MODAL",
}
`;

exports[`Import actions Returns the correct object literals 10`] = `
Object {
  "entity": "rates",
  "type": "import/CONFIRM_IMPORT_INTENT",
}
`;

exports[`Import actions Returns the correct object literals 11`] = `
Object {
  "entity": "rates",
  "type": "import/CANCEL_IMPORT_INTENT",
}
`;
